--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2015-03-27 Chris Needham <chris.needham@bbc.co.uk>
+
+ * v1.0.2, Updated gem dependencies
+
 2013-10-14 Chris Needham <chris.needham@bbc.co.uk>
 
  * v1.0.1, initial public release
