--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,20 @@
+v1.0.7, 2020-03-20, Chris Needham <chris.needham@bbc.co.uk>
+
+ * Updated json gem to 2.3
+ * Updated rake to 13.0.1
+
+v1.0.6, 2019-10-23, Chris Needham <chris.needham@bbc.co.uk>
+
+ * Updated yard to 0.9.20
+
+v1.0.5, 2019-10-23, Chris Needham <chris.needham@bbc.co.uk>
+
+ * Removed use of Dir::Tmpname.make_tmpname in tests
+
+v1.0.4, 2017-12-21, Chris Needham <chris.needham@bbc.co.uk>
+
+ * Updated dependencies
+
 v1.0.3, 2017-03-23, Chris Needham <chris.needham@bbc.co.uk>
 
  * Updated json gem to 1.8.5 for Ruby 2.4.0 compatibility
